# cube-timer

api/: api.cabal
api/app/: Main.hs
api/src/: Api.hs  Config.hs  User.hs
frontend/: .gitignore  nuxt.config.js  package.json  vue.config.js
frontend/components/: Login.vue  Modal.vue  ProfileStatus.vue  Register.vue  Stopwatch.vue
frontend/pages/: index.vue
frontend/styles/: modal_style.css
