cabal-version:      2.4
name:               api
version:            0.1.0.0


common common
  build-depends:
    base ^>=4.16.4.0
  default-language: Haskell2010
  ghc-options: -Wall

library
  import: common
  hs-source-dirs: src
  exposed-modules: 
      Api,
      User,
      Config
  build-depends:
      scotty >= 0.12,
      scotty-cookie,
      aeson >= 2.1,
      HDBC >= 2.4,
      HDBC-sqlite3 >= 2.3.3,
      persistent-sqlite >= 2.13.1,
      persistent,
      monad-logger,
      bcrypt,
      bytestring,
      time,
      crypto-api,
      mtl,
      base64,
      text

executable shortener
  import: common
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    api